--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
+    compileSdkVersion 28
     buildToolsVersion "29.0.0"
 
     defaultConfig {
-        applicationId "com.example.listmultichoise"
-        minSdkVersion 11
-        targetSdkVersion 19
+        applicationId "com.example.iponkan"
+        minSdkVersion 21
+        targetSdkVersion 28
     }
 
     buildTypes {
@@ -19,5 +19,5 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:19.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
